backend/k8s/base/notification-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-service
spec:
  rules:
    - host: ${NOTIFICATION_SERVICE_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8083
